Bug 1735095 [Wayland] Polish cursorOffset logging, r=jhorak

Differential Revision: https://phabricator.services.mozilla.com/D129153